# CloudIoTPy

./: .gitignore  .gitmodules  README.md  install.sh  main.py  pyproject.toml
cloudiotpy/: __init__.py
cloudiotpy/common/: __init__.py  exceptions.py  logging_setup.py
cloudiotpy/config/: __init__.py  config_loader.py
cloudiotpy/iot/: __init__.py  iot_client.py  iot_manager.py
cloudiotpy/iot/providers/: __init__.py  aws_client.py  azure_client.py
cloudiotpy/offline_storage/: __init__.py  offline_storage.py  offline_storage_json.py  offline_storage_service.py  offline_storage_sqlite.py
cloudiotpy/preprocessor/: __init__.py  telemetry_preprocessor.py
cloudiotpy/sensors_integration/: __init__.py  sensor_reading_service.py
configs_json/: cloud_config_template.json
docs/: configuration_system.md  index.md  offline_storage.md  using_AWS_IoT_Core.md  using_Azure-IoT_Hub.md
tests/: conftest.py
tests/offline_storage/: test_offline_storage.py  test_offline_storage_json.py  test_offline_storage_sqlite.py
