[build-system]
requires = [
  "setuptools>=45",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "CloudIoTPy"
version = "0.1.0"
description = "Multi-cloud IoT solution integrating sensor_py for sensor data, featuring offline caching, device configuration management, and remote commands."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

authors = [
  { name = "Daniel POURREAU", email = "pourreaudaniel@gmail.com" }
]

keywords = [
  "iot",
  "azure",
  "aws",
  "cloud",
  "sensorpy",
  "device twin",
  "offline caching",
  "direct methods",
  "remote configuration"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Networking"
]

dependencies = [
  # Cloud provider SDKs
  "azure-iot-device>=2.12.0",
  "azure-identity>=1.12.0",
  "awsiotsdk>=1.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=22.0",
  "isort>=5.0",
  "mypy>=1.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["sensor_py*"]  # sensor_py is a submodule, not part of this package

[tool.black]
line-length = 130
target-version = ["py38"]
include = "\\.pyi?$"
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 130
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "-q",
  "--cov=cloudiotpy",
  "--cov-report=term-missing"
]
testpaths = [
  "tests"
]
